# tensorflow-cpp-VS2015

./: .gitignore  add_graph.pb  main.cpp  readme.md  tensorflow-cpp.sln  tensorflow-cpp.vcxproj  writegraph.py  writegraph.pyproj
MTCNN/: MTCNN.vcxproj  camera.cpp  test.cpp  utils.cpp
cpp/: main.cpp  tensorflow-cpp.vcxproj
facenet/: classify.cpp  facenet.vcxproj  facenet_tf.cpp  facenet_tf.h
keras2cpp/: CMakeLists.txt  h5_to_pb.py  keras.pyproj  keras2cpp.cpp  keras2cpp.vcxproj  keras_train.py  load_h5_test.py  load_pb_test.py  readme.md
models/: add_graph.pb
py/: writegraph.py
